--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
           <nav>
             <ul>
               <li><a class="about" href="#about-me-container">ABOUT</a></li>
-              <li><a href="http://">RESUME</a></li>
-              <li><a href="./html/portfolio.html">PORTFOLIO</a></li>
+              <li><a href="./img/Resume-converted.pdf">RESUME</a></li>
+              <li><a href="#portfolio">PORTFOLIO</a></li>
               <li><a href="#contact">CONTACT</a></li>
             </ul>
           </nav>
@@ -31,8 +31,8 @@
       </div>
       <br>
       <div class="media">
-        <a href="https://www.linkedin.com/in/daniel-yu-264360199/"><img src="https://img.icons8.com/ios-filled/50/000000/linkedin.png"/></a>
-        <a href="https://github.com/DanielYu0864"><img src="https://img.icons8.com/ios-filled/50/000000/github.png"/></a>
+        <a href="https://www.linkedin.com/in/daniel-yu-264360199/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/000000/linkedin.png"/></a>
+        <a href="https://github.com/DanielYu0864" target="_blank"><img src="https://img.icons8.com/ios-filled/50/000000/github.png"/></a>
       </div>
 
     </div>
@@ -58,6 +58,50 @@
                   love cooking but only know how to cook Taiwanese food
                 </p>
       </div>
+    <div class="line"></div>
+    <div class="portfolio" id="portfolio">
+        <div class="sk8tool-box">
+
+          <div class="sk8tool">
+            <img src="./img/sk8tool.jpg" alt="">
+            <a href="https://github.com/DanielYu0864/Project-02-Sk8Tool">
+              <div class="sk8tool-text"><p># sk8tool</p></div>
+            </a>
+          </div>
+
+          <div class="box-contain">
+            <h2>sk8tool</h2>
+            <p>A full stack application that user can add skate spot and to search the city and
+              display the spots, skatepark, and skate shop on the map. Include the weather
+              information of the city</p>
+            <h3>Language</h3>
+            <p>Bulid with Javascript, MySQL as database, and Node.js as servers</p>
+          </div>
+
+        </div>
+
+
+        <div class="EMS-box">
+          <div class="EMS">
+            <img src="./img/EMS.png" alt="">
+            <a href="https://github.com/DanielYu0864/DanielYu-HomeWork-12-Employee-Management-System">
+              <div class="EMS-text"><p># Employee Management System</p></div>
+            </a>
+          </div>
+
+          <div class="box-contain">
+            <h2>Employee Management System</h2>
+            <p>A pure backend application to be able to view and manage the departments, roles,
+              and employees in the company.</p>
+            <h3>Language</h3>
+            <p>Bulid with MySQL as database, and use Node.js to manage all the data from the database</p>
+          </div>
+
+        </div>
+
+
+
+    </div>
     <div class="line"></div>
       <div class="contact" id="contact">
         <ul>
