--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
           <div class="sk8tool">
             <img src="./img/sk8tool.jpg" alt="">
-            <a href="https://github.com/DanielYu0864/Project-02-Sk8Tool">
+            <a href="https://sk8fndr.herokuapp.com/">
               <div class="sk8tool-text"><p># sk8tool</p></div>
             </a>
           </div>
